# fastapi_backend_template

./: pyproject.toml
app/: main.py
app/api/: route.py
app/api/errors/: http_error.py
app/core/: app_events.py  auth.py  config.py  containers.py  sqlalchemy.py
app/core/settings/: app.py  base.py
app/db/: dependencies.py  session.py
app/models/db/: __init__.py  base.py
app/models/domain/: common.py
app/models/schemas/: common.py
app/services/: encryption.py
app/services/lib/seed_128_cbc/: compile.sh
