[tool.poetry]
name = "kt-backend"
version = "0.1.0"
description = ""
authors = ["박지홍 <bagjihong@bagjihong-ui-MacBookPro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
dependency-injector = "^4.42.0"
sqlalchemy = "^2.0.35"
boto3 = "^1.35.35"
starlette = "0.38.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
